Improved Demo program

--- a/dev/LockDemo/CMakeLists.txt
+++ b/dev/LockDemo/CMakeLists.txt
@@ -5,3 +5,5 @@ add_library(${TARGET_NAME}
 )
 
 target_include_directories(${TARGET_NAME} PUBLIC include)
+
+install(TARGETS ${TARGET_NAME} LIBRARY DESTINATION lib)
