--- a/dev/SpinLockExample/CMakeLists.txt
+++ b/dev/SpinLockExample/CMakeLists.txt
@@ -1,9 +1,15 @@
 set(TARGET_NAME SpinLockExample)
 
+message("CMAKE_PREFIX_PATH =  ${CMAKE_PREFIX_PATH}")
+
+find_package(Boost REQUIRED Timer)
+
 add_executable(${TARGET_NAME}
     src/SimpleDemo.cxx
 )
 
-target_link_libraries(${TARGET_NAME} SpinLock)
+target_link_libraries(${TARGET_NAME} SpinLock ${Boost_LIBRARIES})
 
 target_include_directories(${TARGET_NAME} PUBLIC include)
+
+install(TARGETS SpinLockExample RUNTIME DESTINATION bin)
