modified project structure

--- a/dev/SpinLockExample/CMakeLists.txt
+++ b/dev/SpinLockExample/CMakeLists.txt
@@ -6,9 +6,10 @@ find_package(Boost REQUIRED Timer)
 
 add_executable(${TARGET_NAME}
     src/SimpleDemo.cxx
+    src/SpinLock.cxx
 )
 
-target_link_libraries(${TARGET_NAME} SpinLock ${Boost_LIBRARIES})
+target_link_libraries(${TARGET_NAME} ${Boost_LIBRARIES})
 
 target_include_directories(${TARGET_NAME} PUBLIC include)
 
